dicce project starter file updated

--- a/dicee/web/manifest.json
+++ b/dicee/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "dicee",
-    "short_name": "dicee",
+    "name": "dicee_flutter",
+    "short_name": "dicee_flutter",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
