--- a/dicee/macos/Runner/Configs/AppInfo.xcconfig
+++ b/dicee/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = dicee
+PRODUCT_NAME = dicee_flutter
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.dicee
+PRODUCT_BUNDLE_IDENTIFIER = co.appbrewery.diceeFlutter
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2024 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2024 co.appbrewery. All rights reserved.
